weekdone-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weekdone-client
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: weekdone-client
    app.kubernetes.io/name: weekdone-client
  type: NodePort
