weekdone-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: weekdone-server
    app.kubernetes.io/name: weekdone-server
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: weekdone-server
    app.kubernetes.io/name: weekdone-server
  sessionAffinity: None
  type: ClusterIP
