weekdone-client-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: weekdone-client-route
spec:
  host:
  path: /
  port:
    targetPort: 80
  to:
    kind: Service
    name: weekdone-client
    weight: 100
  wildcardPolicy: None
